@@ -119,7 +119,7 @@ FlintLock::lock(bool exclusive, string & explanation) {
     }
 
     int fds[2];
-    if (socketpair(AF_UNIX, SOCK_STREAM, PF_UNSPEC, fds) < 0) {
+    if (socketpair(AF_UNIX, SOCK_STREAM|SOCK_CLOEXEC, PF_UNSPEC, fds) < 0) {
 	// Couldn't create socketpair.
 	explanation = string("Couldn't create socketpair: ") + strerror(errno);
 	reason why = ((errno == EMFILE || errno == ENFILE) ? FDLIMIT : UNKNOWN);
@@ -133,6 +133,18 @@ FlintLock::lock(bool exclusive, string & explanation) {
 	// Child process.
 	close(fds[0]);
 
+#if defined F_SETFD && defined FD_CLOEXEC
+	// Clear close-on-exec flag, if we set it when we called socketpair().
+	// Clearing it here means there's no window where another thread in the
+	// parent process could fork()+exec() and end up with this fd still
+	// open (assuming close-on-exec is supported).
+	//
+	// We can't use a preprocessor check on the *value* of SOCK_CLOEXEC as
+	// on Linux SOCK_CLOEXEC is an enum, with '#define SOCK_CLOEXEC
+	// SOCK_CLOEXEC' to allow '#ifdef SOCK_CLOEXEC' to work.
+	if (SOCK_CLOEXEC != 0)
+	    (void)fcntl(fds[1], F_SETFD, 0);
+#endif
 	// Connect pipe to stdin and stdout.
 	dup2(fds[1], 0);
 	dup2(fds[1], 1);
